--- a/src/Services/Services.csproj
+++ b/src/Services/Services.csproj
@@ -19,4 +19,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DAL\" />
+    </ItemGroup>
+
 </Project>
